tests/snapshots/golden__golden@assignments.lox.snap
---
source: tests/golden.rs
assertion_line: 34
expression: run_test(path)
input_file: tests/fixtures/assignments.lox
---
'''
lox
'''
