tests/snapshots/golden__golden@basic_function_call.lox.snap
---
source: tests/golden.rs
assertion_line: 34
expression: run_test(path)
input_file: tests/fixtures/basic_function_call.lox
---
'''
Hi, Dear Reader!
'''
