tests/snapshots/golden__golden@basic_logic.lox.snap
---
source: tests/golden.rs
assertion_line: 34
expression: run_test(path)
input_file: tests/fixtures/basic_logic.lox
---
'''
hi
yes
'''
