tests/snapshots/golden__golden@basic_statements.lox.snap
---
source: tests/golden.rs
assertion_line: 33
expression: run_test(path)
input_file: tests/fixtures/basic_statements.lox
---
'''
-5617.41
'''
