tests/snapshots/golden__golden@basic_while.lox.snap
---
source: tests/golden.rs
assertion_line: 33
expression: run_test(path)
input_file: tests/fixtures/basic_while.lox
---
'''
1
2
3
4
5
6
7
8
9
10
'''
