tests/snapshots/golden__golden@builtin_call.lox.snap
---
source: tests/golden.rs
assertion_line: 33
expression: run_test(path)
input_file: tests/fixtures/builtin_call.lox
---
'''
true
'''
