tests/snapshots/golden__golden@for_loop.lox.snap
---
source: tests/golden.rs
assertion_line: 33
expression: run_test(path)
input_file: tests/fixtures/for_loop.lox
---
'''
0
1
1
2
3
5
8
13
21
34
55
89
144
233
377
610
987
1597
2584
4181
6765
'''
