tests/snapshots/golden__golden@if_true.lox.snap
---
source: tests/golden.rs
assertion_line: 34
expression: run_test(path)
input_file: tests/fixtures/if_true.lox
---
'''
truthy!
'''
