tests/snapshots/golden__golden@reassignment.lox.snap
---
source: tests/golden.rs
assertion_line: 34
expression: run_test(path)
input_file: tests/fixtures/reassignment.lox
---
'''
rust
lox
'''
