tests/snapshots/golden__golden@resolving_and_binding.lox.snap
---
source: tests/golden.rs
assertion_line: 34
expression: run_test(path)
input_file: tests/fixtures/resolving_and_binding.lox
---
'''
global
global
'''
